fix(client): fix form editor overflow

--- a/client/src/app/tabs/form/FormEditor.less
+++ b/client/src/app/tabs/form/FormEditor.less
@@ -15,6 +15,20 @@
     flex-direction: row;
   }
 
+  .fjs-editor-container .fjs-form-container {
+    position: relative;
+  }
+
+  .fjs-editor-container .fjs-form,
+  .fjs-editor-container .fjs-properties-panel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+  }
+
   .fjs-powered-by {
     display: none;
   }
